--- a/ShoppingCart/ShoppingCart/appsettings.json
+++ b/ShoppingCart/ShoppingCart/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "test": "Server=(LocalDb)\\MSSQLLocalDB;Database=RealTime22;Trusted_Connection=True"
+  },
   "AllowedHosts": "*"
 }
